# ILL-Aegisub-Scripts

./: .gitignore  404.html  DependencyControl.json  LICENSE  README  index.html  mkdocs.yml
.github/workflows/: ci.yml  depctrl.yml  docs.yml  updateFeed.py
clipper2/: index.html
core/: index.html
docs/: clipper2.md  core.md  geometry.md  image.md  index.md  macros.md  modules.md  text-and-tags.md
ffi-packages/: CMakeLists.txt  build.bat  build.sh
ffi-packages/Clipper2/: CMakeLists.txt  clipper.wrap.cpp  clipper.wrap.h
ffi-packages/Images/: CMakeLists.txt
geometry/: index.html
image/: index.html
javascripts/: default-dark.js  moonscript-highlight.js
macros/: ILL.ChangeAlign.moon  ILL.EnvelopeDistort.moon  ILL.ImageTracer.moon  ILL.Line2FBF.moon  ILL.MakeImage.moon  ILL.Shapery.moon  ILL.SplitText.moon  index.html
modules/: index.html
modules/ILL/: ILL.moon  IMG.moon  Main.moon
modules/ILL/ILL/: Aegi.moon  Config.moon  Math.moon  UTF8.moon  Util.moon
modules/ILL/ILL/Ass/: Ass.moon  Line.moon
modules/ILL/ILL/Ass/Shape/: Curve.moon  Path.moon  Point.moon  Segment.moon
modules/ILL/ILL/Ass/Text/: Tag.moon  Tags.moon  Text.moon
modules/ILL/ILL/Font/: Font.moon  Init.moon  Unx.moon  Win.moon
modules/ILL/IMG/: Potrace.moon  Tracer.moon
modules/ILL/IMG/bitmap/: bitmap.moon
modules/ILL/IMG/buffer/: buffer.moon
modules/ILL/IMG/giflib/: giflib.moon
modules/ILL/IMG/lodepng/: lodepng.moon
modules/ILL/IMG/turbojpeg/: turbojpeg.moon
modules/clipper2/: clipper2.moon
search/: search_index.json
text-and-tags/: index.html
